--- a/Nine/View/Base.lproj/Main.storyboard
+++ b/Nine/View/Base.lproj/Main.storyboard
@@ -125,13 +125,13 @@
                                 <rect key="frame" x="0.0" y="103" width="430" height="829"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SHR-hp-eEe" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="430" height="930"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="430" height="940.66666666666663"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="ZNZ-2X-1QU" userLabel="VStack View">
-                                                <rect key="frame" x="15" y="20" width="400" height="170"/>
+                                                <rect key="frame" x="15" y="20" width="400" height="180.66666666666666"/>
                                                 <subviews>
                                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PUNJABI GROCERY &amp; DELI" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pdg-uD-4Uq" userLabel="Name Label">
-                                                        <rect key="frame" x="0.0" y="0.0" width="400" height="82.666666666666671"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="400" height="93.333333333333329"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="kgy-MQ-4ii"/>
                                                         </constraints>
@@ -140,7 +140,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="BWG-Re-fGK" userLabel="Address/Phone VStack View">
-                                                        <rect key="frame" x="0.0" y="107.66666666666664" width="400" height="62.333333333333329"/>
+                                                        <rect key="frame" x="0.0" y="118.33333333333333" width="400" height="62.333333333333329"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="e2p-D1-mp3" userLabel="Address HStack View">
                                                                 <rect key="frame" x="0.0" y="0.0" width="400" height="17.333333333333332"/>
@@ -209,7 +209,7 @@
                                                 </constraints>
                                             </stackView>
                                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u6X-Da-gJJ" userLabel="Description Label">
-                                                <rect key="frame" x="15" y="490" width="400" height="345"/>
+                                                <rect key="frame" x="15" y="500.66666666666663" width="400" height="345"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="g5J-t2-10W"/>
                                                 </constraints>
@@ -219,7 +219,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QpB-P6-LPe">
-                                                <rect key="frame" x="139.33333333333331" y="875" width="151.33333333333331" height="35"/>
+                                                <rect key="frame" x="139.33333333333331" y="885.66666666666663" width="151.33333333333331" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="G9u-OM-rvD"/>
                                                 </constraints>
@@ -232,7 +232,7 @@
                                                 </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lichen" translatesAutoresizingMaskIntoConstraints="NO" id="Hnp-74-INV">
-                                                <rect key="frame" x="0.0" y="225" width="430" height="230"/>
+                                                <rect key="frame" x="0.0" y="235.66666666666669" width="430" height="230"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="230" id="bbe-IN-ic8"/>
                                                 </constraints>
@@ -397,11 +397,11 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Cpz-fE-6A5"/>
+        <segue reference="Kx4-2U-Aql"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="lichen" width="500" height="400.33334350585938"/>
-        <image name="nine-flower-about-page" width="381" height="381"/>
+        <image name="nine-flower-about-page" width="127" height="127"/>
         <namedColor name="NineGrey">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
