--- a/Nine/View/Base.lproj/Main.storyboard
+++ b/Nine/View/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LdV-fg-lfq">
                                                 <rect key="frame" x="15" y="30" width="398" height="259"/>
-                                                <mutableString key="text">The name Nine pays homage to the nine established Chinatowns within New York City. This is a passion project that captures our personal journey as young Asian Americans living in one of the world's most densely populated cities. It celebrates the collective endeavor to rediscover our cultural identity through authentic cuisines and services, while actively contributing to the growth of our community. With that in mind, we have meticulously curated a selection of 19 beloved Asian American-owned businesses to support now and always. While the current list is by no means exhaustive, we invite you to submit your own recommendations to our online database for a chance to be featured. In solidarity with the AAPI communities, we join the fight against hate crimes during these challenging times of COVID-19. </mutableString>
+                                                <string key="text">The name Nine pays homage to the nine established Chinatowns within New York City. This is a passion project that captures our personal journey as young Asian Americans living in one of the world's most densely populated cities. It celebrates the collective endeavor to rediscover our cultural identity through authentic cuisines and services, while actively contributing to the growth of our community. With that in mind, we have meticulously curated a selection of 19 beloved Asian American-owned businesses to support now and always. While the current list is by no means exhaustive, we invite you to submit your own recommendations to our online database for a chance to be featured. In solidarity with the AAPI communities, we join the fight against hate crimes during these challenging times of COVID-19. </string>
                                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -124,13 +124,13 @@
                                 <rect key="frame" x="0.0" y="91" width="428" height="835"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SHR-hp-eEe" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="428" height="930"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="940.66666666666663"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="ZNZ-2X-1QU" userLabel="VStack View">
-                                                <rect key="frame" x="15" y="20" width="398" height="170"/>
+                                                <rect key="frame" x="15" y="20" width="398" height="180.66666666666666"/>
                                                 <subviews>
                                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PUNJABI GROCERY &amp; DELI" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pdg-uD-4Uq" userLabel="Name Label">
-                                                        <rect key="frame" x="0.0" y="0.0" width="398" height="82.666666666666671"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="398" height="93.333333333333329"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="kgy-MQ-4ii"/>
                                                         </constraints>
@@ -139,7 +139,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="BWG-Re-fGK" userLabel="Address/Phone VStack View">
-                                                        <rect key="frame" x="0.0" y="107.66666666666664" width="398" height="62.333333333333329"/>
+                                                        <rect key="frame" x="0.0" y="118.33333333333333" width="398" height="62.333333333333329"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="e2p-D1-mp3" userLabel="Address HStack View">
                                                                 <rect key="frame" x="0.0" y="0.0" width="398" height="17.333333333333332"/>
@@ -208,7 +208,7 @@
                                                 </constraints>
                                             </stackView>
                                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u6X-Da-gJJ" userLabel="Description Label">
-                                                <rect key="frame" x="15" y="490" width="398" height="345"/>
+                                                <rect key="frame" x="15" y="500.66666666666663" width="398" height="345"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="g5J-t2-10W"/>
                                                 </constraints>
@@ -218,7 +218,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QpB-P6-LPe">
-                                                <rect key="frame" x="139.33333333333331" y="875" width="149.33333333333331" height="35"/>
+                                                <rect key="frame" x="139.33333333333331" y="885.66666666666663" width="149.33333333333331" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="G9u-OM-rvD"/>
                                                 </constraints>
@@ -231,7 +231,7 @@
                                                 </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lichen" translatesAutoresizingMaskIntoConstraints="NO" id="Hnp-74-INV">
-                                                <rect key="frame" x="0.0" y="225" width="428" height="230"/>
+                                                <rect key="frame" x="0.0" y="235.66666666666669" width="428" height="230"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="230" id="bbe-IN-ic8"/>
                                                 </constraints>
